added labels for instructions

--- a/creatorSMX.html
+++ b/creatorSMX.html
@@ -47,6 +47,10 @@
                         </div>
                       </div>
                       <div class="row">
+                        <label class="h6">*Click in tiles to add color</label>
+                        <label class="h6">*You cant paint black tiles</label>
+                      </div>
+                      <div class="row">
                         <canvas hidden id="referenceCanvas" width="23" height="24">
                           Your browser does not support the HTML5 canvas tag.
                         </canvas>
@@ -105,6 +109,10 @@
                         <div class="col-md-4 text-center">
                           <button id="downRight" class="btn btn-outline-primary"><i class="fa fa-circle-o"></i></button>
                         </div>
+                      </div>
+                      <br>
+                      <div class="row">
+                        <label class="h6">*Click in any button to fill color</label>
                       </div>
                     </div>
                   </div>
