--- a/creatorSMX.html
+++ b/creatorSMX.html
@@ -28,15 +28,12 @@
       <div class="row">
         <div class="col text-center">
           <div class="card">
-            <div class="card-header">
-              Base
-            </div>
             <div class="card-body">
               <div class="row">
                 <div class="col text-center">
                   <div class="card">
                     <div class="card-header">
-                      Color picker
+                      Preview
                     </div>
                     <div class="card-body">
                       <div class="row">
