--- a/creatorSMX.html
+++ b/creatorSMX.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:rel="http://www.w3.org/1999/xhtml">
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -19,6 +19,8 @@
   <title>SMX GIF</title>
 </head>
 <body>
+<script src="scripts/libgif.js"></script>
+<script src="scripts/rubbable.js"></script>
 <div class="container-fluid">
   <div class="card">
     <div class="card-header">
@@ -173,6 +175,11 @@
               <button id="runFrames" style="display: none" type="button" class="btn btn-primary">Run</button>
             </div>
             <div class="card-body">
+              <div class="row">
+                <label for="file">Upload GIF FILE</label>
+                <input class="input-group" type="file" id="file" name="file"/>
+                <output id="list"></output>
+              </div>
               <div class="row">
                 <label for="speedInput">Speed(ms)</label>
                 <input id="speedInput" type="number" class="form-control">
