added mouse over listener to canvas, added gif reference

--- a/creatorSMX.html
+++ b/creatorSMX.html
@@ -157,9 +157,12 @@
                     <!--<div class="col text-center">
                       <img id="generatedImage" src="template.png" alt="">
                     </div>-->
-                    <div class="col text-center">
-                      <img id="gifImage" src="template.png" alt="">
-                      <img id="gifDownload" hidden src="template.png" alt="">
+                    <div class="col-md-12">
+                        <img id="gifImage" src="template.png" alt="">
+                        <img id="gifDownload" width="230" height="240" src="template.png" alt="">
+                    </div>
+                    <div class="col-md-12">
+                      <label>*if the gif get blurry between frames you need create it again</label>
                     </div>
                   </div>
                 </div>
