--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
-  <link rel="stylesheet" href="css/style.css">
-  <link href="css/fontawesome/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
+  <link href="./css/fontawesome/css/all.css" rel="stylesheet">
 
   <title>SMX GIF</title>
 </head>
